Renaming main to book1

--- a/4T/.gitignore
+++ b/4T/.gitignore
@@ -42,8 +42,8 @@ ch19.aux
 ch19.log
 ch20.aux
 ch20.log
-main.aux
-main.log
-main.synctex.gz
-main.toc
+book1.aux
+book.log
+book1.synctex.gz
+book1.toc
 
