Starting up book2, adding ch21 basic

--- a/4T/.gitignore
+++ b/4T/.gitignore
@@ -42,8 +42,14 @@ ch19.aux
 ch19.log
 ch20.aux
 ch20.log
+ch21.aux
+ch21.log
 book1.aux
 book1.log
 book1.synctex.gz
 book1.toc
+book2.aux
+book2.log
+book2.synctex.gz
+book2.toc
 
