Adding ch37 basic and starting book3

--- a/4T/.gitignore
+++ b/4T/.gitignore
@@ -74,6 +74,8 @@ ch35.aux
 ch35.log
 ch36.aux
 ch36.log
+ch37.aux
+ch37.log
 book1.aux
 book1.log
 book1.synctex.gz
@@ -82,4 +84,8 @@ book2.aux
 book2.log
 book2.synctex.gz
 book2.toc
+book3.aux
+book3.log
+book3.synctex.gz
+book3.toc
 
