Adding in part of timeline doc for the start of book2 & 3 to summarize what is covered in the earlier books

--- a/4T/.gitignore
+++ b/4T/.gitignore
@@ -88,10 +88,14 @@ book1.aux
 book1.log
 book1.synctex.gz
 book1.toc
+book2_timeline.aux
+book2_timeline.log
 book2.aux
 book2.log
 book2.synctex.gz
 book2.toc
+book3_timeline.aux
+book3_timeline.log
 book3.aux
 book3.log
 book3.synctex.gz
